Revision history for {{$dist->name}}

{{$NEXT}}
          correct the 2.100990 release, which was broken in all $VERSION nums

2.100990  2010-04-09 10:12:06 America/New_York
          fix Pod errors in @Classic (thanks Ævar)

2.100960  2010-04-06 17:00:26 America/New_York
          added @Basic, more suitable for basic use than @Classic
          delegate logging to the Dist::Zilla::App object
          the controller attribute is now called "chrome"; this should last
          replace File::chdir with File::pushd (David Golden)

2.100922  2010-04-02 18:53:55 America/New_York
          BuildRunner and TestRunner routines now must die, not return errors

          added TestRelease plugin (from Christopher J. Madsen)
          refactored run_tests_in out of the test method

2.100921  2010-04-02 16:04:57 America/New_York
          add the missing ->ensure_built method

2.100920  2010-04-02 10:45:45 America/New_York
          BeforeArchive plugins introduced (thanks, Graham Barr)
          PkgVersion now puts version declaration in a BEGIN block
          fix required version of Config::MVP
          include recommendations in distmeta

2.100880  2010-03-29 10:00:20 America/New_York
          first non-dev release of version 2

2.100870  2010-03-28 17:07:24 America/New_York

2.100862  2010-03-27 13:32:01 America/New_York

2.100861  2010-03-27 13:17:23 America/New_York
          INCOMPATIBLE CHANGES:

          the AllFiles plugin is now known as GatherDir

          the InstallDirs plugin has been replaced by ExecDir and ShareDir

          the PodTests plugin has been replaced by PodCoverageTests and
          PodSyntaxTests

          the FixedPrereq role is replaced with PrereqSource

          OTHER CHANGES:

          numerous improvements to testing libraries
          ...and numerous actual tests!

          added include_dotfiles option to GatherDir
          allow relative root directory for GatherDir

          AutoPrereq is now distributed with Dist::Zilla
