@@ -95,10 +95,13 @@ sub zilla {
     $zilla->logger->set_debug($verbose ? 1 : 0);
 
     VERBOSE_PLUGIN: for my $plugin_name (grep { ! m{\A[-_]\z} } @v_plugins) {
-      $zilla->log_fatal("can't find plugin $plugin_name to set debug mode")
-        unless my $plugin = $zilla->plugin_named($plugin_name);
+      my @plugins = grep { $_->plugin_name =~ /\b\Q$plugin_name\E\b/ }
+                    $zilla->plugins->flatten;
 
-      $plugin->logger->set_debug(1);
+      $zilla->log_fatal("can't find plugins matching $plugin_name to set debug")
+        unless @plugins;
+
+      $_->logger->set_debug(1) for @plugins;
     }
 
     $zilla;
